[package]
name = "html-to-rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.17", features = ["derive"] }
rss = { version = "2.0.1", features = ["validation"] }
scraper = { version = "0.13.0", features = ["deterministic"] }
