[package]
name = "html-to-rss"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jeysal/html-to-rss"
authors = ["Tim Seckinger <seckinger.tim@gmail.com>"]
description = "An opinionated CLI tool that reads HTML files and writes/updates a RSS feed file"
categories = ["command-line-utilities"]
keywords = ["CLI", "HTML", "RSS"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.17", features = ["derive"] }
rss = { version = "2.0.1", features = ["validation"] }
scraper = { version = "0.13.0", features = ["deterministic"] }
